Detangle analysis base and values